fixed alignment issues, changed color back (sorry brad)

--- a/HikePoster/src/pages/posts.css
+++ b/HikePoster/src/pages/posts.css
@@ -1,9 +1,44 @@
-.center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.header {
+  width: 100%;
+  margin: auto;
+  padding: 10px;
+  text-align: center;
+}
+
+
+.post {
+  width: 100%;
+  margin: auto;
+  padding: 10px;
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+}
+
+
+
+
+/* .center {
+    margin: auto;
+    
+    padding: 10px;
+
   }
 
-.greenColor {
-    background-color: yellowgreen;
+.body {
+    background-color: light dark; 
+    width : 100%;
+    align-content: center;   
 }
+
+#postImage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+} */
